--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ google-auth-httplib2==0.1.0
 loguru==0.6.0
 sqlalchemy==2.0.7
 psycopg2-binary==2.9.5
-asyncpg==0.27.0 "no para mysql"
+aiomysql==0.1.1
 pymysql==1.0.2
+greenlet==2.0.2
