--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-python-telegram-bot==20.4
+python-telegram-bot==21.3
 python-telegram-bot[job-queue]
 google-api-python-client==2.88.0
 google-auth-httplib2==0.1.0
+psycopg2-binary==2.9.9
+wheel==0.43.0
 loguru==0.7.0
 sqlalchemy==2.0.15
-psycopg2-binary==2.9.6
 aiomysql==0.1.1
-pymysql==1.1.1
-greenlet==2.0.2
+pymysql==1.0.3
+greenlet==3.0.3
